k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-app-service
  namespace: tickets-cloudops
  labels:
    app: tickets-app
spec:
  type: LoadBalancer
  selector:
    app: tickets-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
