k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickets-app-ingress
  namespace: tickets-cloudops
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: tickets.cloudops.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tickets-app-service
                port:
                  number: 80
